--- a/public/css/style.css
+++ b/public/css/style.css
@@ -898,7 +898,7 @@ p {
 #fh5co-menus .fh5co-food-menu ul li .fh5co-food-desc {
   clear: both;
   float: left;
-  width: 80%;
+  width: 70%;
 }
 #fh5co-menus .fh5co-food-menu ul li .fh5co-food-desc > figure {
   width: 20%;
@@ -913,6 +913,8 @@ p {
   -ms-border-radius: 4px;
   border-radius: 4px;
   margin-bottom: 0;
+  object-fit: cover;
+  aspect-ratio: 7/5;
 }
 #fh5co-menus .fh5co-food-menu ul li .fh5co-food-desc > div {
   width: 75%;
@@ -932,7 +934,7 @@ p {
 }
 #fh5co-menus .fh5co-food-menu ul li .fh5co-food-pricing {
   float: right;
-  width: 20%;
+  width: 30%;
   text-align: right;
   font-size: 20px;
   color: #fb6e14;
