--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1460,3 +1460,72 @@ p {
   }
 }
 /*# sourceMappingURL=style.css.map */
+
+.bootstrap-datetimepicker-widget.dropdown-menu {
+  width: auto;
+}
+
+.bootstrap-datetimepicker-widget table td.active, .bootstrap-datetimepicker-widget table td.active:hover {
+  background-color: #f5f5f5;
+  color: #000;
+}
+
+.bootstrap-datetimepicker-widget table td {
+  color: rgb(108, 117, 125);
+}
+
+.bootstrap-datetimepicker-widget table td.new, .bootstrap-datetimepicker-widget table td.old {
+  color: rgb(158, 166, 173);
+}
+
+.input-group {
+  width: 100%;
+}
+
+.select2-container--bootstrap4 .select2-selection{
+  background-color: transparent;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+  height: 54px !important;
+  padding: 10px 20px;
+}
+
+.select2-container--bootstrap4 .select2-selection--single .select2-selection__rendered {
+  color:#bebebe;
+}
+
+.select2-dropdown {
+  background-color:#222;
+}
+
+.select2-container--bootstrap4 .select2-results__option--highlighted, .select2-container--bootstrap4 .select2-results__option--highlighted.select2-results__option[aria-selected="true"] {
+  background-color:#a99c92;
+}
+
+.select2-container--bootstrap4 .select2-dropdown .select2-results__option[aria-selected="true"] {
+  background-color:#a99c92;
+}
+
+.select2-search--dropdown .select2-search__field {
+  background-color:#222;
+}
+
+.select2-container--bootstrap4.select2-container--disabled .select2-selection, .select2-container--bootstrap4.select2-container--disabled.select2-container--focus .select2-selection {
+  background-color: transparent;
+  border: 2px solid rgb(255, 0, 0);
+}
+
+.select2-container--bootstrap4.select2-container--focus .select2-selection {
+  border-color: #fb6e14;
+}
+
+/* Chrome, Safari, Edge, Opera */
+#fh5co-contact input::-webkit-outer-spin-button,
+#fh5co-contact input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+#fh5co-contact input[type=number] {
+  -moz-appearance: textfield;
+}
