--- a/public/css/style.css
+++ b/public/css/style.css
@@ -923,7 +923,7 @@ p {
     margin: 0;
 }
 #fh5co-menus .fh5co-food-menu ul li {
-    padding: 0 0 20px 0;
+    padding: 10px 20px;
     margin: 0 0 20px 0;
     border-bottom: 1px dotted #ccc;
     display: block;
@@ -1616,4 +1616,10 @@ p {
 .error {
     color: #fb4f59;
     margin-bottom: 0;
+}
+
+.menu-disabled {
+    background-color: rgba(90, 90, 90, 0.15);
+    border-radius: 25px;
+    padding: 20px;
 }
